fix: bug fix for not showing the name

--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -4,7 +4,7 @@
     border-radius: 40px;
     text-align: center;
     vertical-align: baseline;
-    font-family: san-serif;
+    // font-family: san-serif;
     line-height:2.3;
 }
 
